added new import of repo

--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -1,4 +1,8 @@
-lab3: main
+lab3: execute
 
-main:
-	@g++ main.cpp cpp/GradeRatesByCategory.cpp headers/GradeRatesByCategory.h cpp/CourseReporter.cpp headers/CourseReporter.h cpp/TypedPassRate.cpp headers/TypedPassRate.h cpp/UserControl.cpp headers/UserControl.h cpp/OutputManager.cpp headers/OutputManager.h
+execute : program
+	@./a.out
+
+program:
+	@echo "Please wait while program builds..."
+	@g++ main.cpp cpp/GradeRatesByCategory.cpp headers/GradeRatesByCategory.h cpp/CourseReporter.cpp headers/CourseReporter.h cpp/TypedPassRate.cpp headers/TypedPassRate.h cpp/UserControl.cpp headers/UserControl.h cpp/OutputManager.cpp headers/OutputManager.h cpp/InputFileManager.cpp headers/InputFileManager.h
